# openMaas

./: .gitignore  AUTHORS  CONTRIBUTING.md  NOTICE  README.md
docs/: API接口设计文档.md  LICENSE-MANAGEMENT.md  (+3 more)
maas-server/: .env.development  .env.example  .env.production  .env.template  .env.testing  .gitignore  README.md  THIRD-PARTY-LICENSES.md  alembic.ini  alembic.ini.template  main.py  pyproject.toml  pyrightconfig.json
maas-server/alembic/: env.py  script.py.mako
maas-server/docs/: DDD重构方法论.md  MaaS后端系统改进计划.md  多用户Agent开发和使用系统-需求分析与系统设计.md  开发任务.md  系统设计.md  需求分析.md
maas-server/docs/agent/: 系统设计.md
maas-server/docs/rag/: RAG系统设计.md  RAG系统需求分析.md
maas-server/src/: __init__.py  main.py  manage_config.py
maas-server/src/apps/api/: router.py
maas-server/src/apps/application/: chat_service.py  schemas.py
maas-server/src/apps/domain/models/: __init__.py  chat.py  enums.py
maas-server/src/apps/domain/repository/: __init__.py  chat_repository.py
maas-server/src/apps/domain/services/: chat_service.py  llm_service.py
maas-server/src/apps/infrastructure/: base_repository.py  chat_repositories.py  models.py
maas-server/src/audit/: __init__.py
maas-server/src/audit/application/: __init__.py  schemas.py  services.py
maas-server/src/audit/domain/: __init__.py  models.py  repositories.py
maas-server/src/audit/domain/services/: __init__.py  audit_analysis_service.py  audit_archive_service.py  audit_rule_service.py
maas-server/src/audit/infrastructure/: __init__.py  batch_operations.py  models.py  repositories.py
maas-server/src/audit/interface/: __init__.py  controller.py
maas-server/src/audit/shared/: config.py  decorators.py  middleware.py
maas-server/src/config/: __init__.py  audit.json  config_utils.py  env_utils.py  schemas.py  settings.py
maas-server/src/model/application/: __init__.py  provider_service.py  schemas.py
maas-server/src/model/domain/: exceptions.py
maas-server/src/model/domain/models/: provider_model.py
maas-server/src/model/domain/repository/: provider_repository.py
maas-server/src/model/domain/services/: __init__.py  model_config_service.py  provider_service.py  validation_service.py
maas-server/src/model/infrastructure/: models.py  repositories.py  repositorise.py  security.py
maas-server/src/model/interface/: __init__.py  provider_controller.py
maas-server/src/shared/: __init__.py  middleware.py
maas-server/src/shared/application/: __init__.py  config.py  exception_mapper.py  exceptions.py  response.py
maas-server/src/shared/domain/: __init__.py  base.py  initializer.py
maas-server/src/shared/infrastructure/: __init__.py  batch_operations.py  cache.py  crypto_service.py  database.py  database_initializer.py  health_check.py  logging_service.py  repository.py  transaction_manager.py
maas-server/src/shared/interface/: __init__.py  auth_middleware.py  dependencies.py
maas-server/src/user/: __init__.py
maas-server/src/user/application/: __init__.py  audit_service.py  auth_service.py  decorators.py  permission_service.py  role_service.py  schemas.py  services.py  user_service.py
maas-server/src/user/domain/: models.py  repositories.py
maas-server/src/user/domain/services/: __init__.py  audit_domain_service.py  auth_domain_service.py  permission_calculation_service.py  permission_domain_service.py  role_domain_service.py  user_domain_service.py  user_lifecycle_service.py  user_validation_service.py
maas-server/src/user/infrastructure/: __init__.py  auth_middleware.py  data_initializer.py  email_service.py  jwt_service.py  middleware.py  models.py  password_service.py  permission.py  repositories.py
maas-server/src/user/interface/: __init__.py  audit_controller.py  auth_controller.py  permission_controller.py  role_controller.py  user_controller.py
maas-server/tests/: __init__.py  conftest.py
maas-server/tests/integration/: test_frontend_permission_api.py  test_permission_management_api.py  test_permission_repository.py  test_role_management_api.py  test_role_repository.py  test_user_permission_api.py  test_user_repository.py
maas-server/tests/integration/user/: test_audit_controller.py  test_permission_middleware.py
maas-server/tests/unit/: __init__.py
maas-server/tests/unit/audit/: __init__.py  test_config.py  test_decorators.py  test_middleware.py
maas-server/tests/unit/model/: __init__.py  conftest.py  factories.py
maas-server/tests/unit/model/application/: __init__.py  test_provider_service.py  test_schemas.py
maas-server/tests/unit/model/infrastructure/: __init__.py  test_model_config_repository.py  test_provider_repository.py
maas-server/tests/unit/model/interface/: __init__.py  test_provider_controller.py
maas-server/tests/unit/shared/: __init__.py  test_crypto_service.py
maas-server/tests/unit/shared/application/: __init__.py  test_config.py  test_exceptions.py
maas-server/tests/unit/shared/domain/: __init__.py  test_base.py
maas-server/tests/unit/shared/infrastructure/: test_crypto_service.py
maas-server/tests/unit/user/: __init__.py
maas-server/tests/unit/user/application/: __init__.py  test_permission_service.py  test_role_service.py  test_services.py
maas-server/tests/unit/user/domain/: __init__.py  test_models.py  test_permission.py  test_role.py  test_user_permissions.py
maas-server/tests/unit/user/infrastructure/: test_audit_logger.py
(+177 files in other folders)
